--- a/src/app/chameleon-reports/erinfo/erinfo.component.html
+++ b/src/app/chameleon-reports/erinfo/erinfo.component.html
@@ -1,53 +1,79 @@
 <div class="body">
   <div class="nine">
-    <h1>{{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span></h1>
+    <h1>{{ titleUnit }}</h1>
   </div>
 
-  <mat-tab-group>
+  <mat-tab-group dir="rtl">
     <!-- Admission Treatment Decision Tab -->
-    <mat-tab label="החלטות טיפול באשפוז">
-      <div class="tab-header">
-        <mat-form-field>
+    <mat-tab label="סיום טיפול במלרד">
+      <div dir="rtl" class="filter-form" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+        <!-- Search Field -->
+        <mat-form-field style="flex-grow: 1; margin-right: 10px; width: 70%;">
           <mat-label>חיפוש</mat-label>
           <input matInput [formControl]="decisionFilter" />
         </mat-form-field>
-        <button mat-raised-button color="primary" (click)="exportToExcel(decisionDataSource, 'Admission_Treatment_Decision')">Export</button>
-        <button mat-raised-button (click)="resetFilter(decisionFilter, decisionDataSource)">Reset</button>
+
+        <!-- Icons -->
+        <div class="icon-container" style="display: flex; align-items: center;">
+          <!-- Excel Export -->
+          <img src="../../assets/excel.png" alt="Export to Excel" (click)="exportToExcel(decisionDataSource, 'Admission_Treatment_Decision')" width="50px" style="margin-left: 10px;" />
+          <!-- Reset Filters -->
+          <button mat-button mat-raised-button color="primary" class="custom-button" (click)="resetFilter(decisionFilter)">
+            <i class="material-icons">refresh</i>
+          </button>
+        </div>
       </div>
-      <div *ngIf="isLoadingDecision" class="loading-spinner">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
-        <h2>הנתונים נטענים...</h2>
-      </div>
-      <mat-table *ngIf="!isLoadingDecision" [dataSource]="decisionDataSource" matSort class="mat-elevation-z8">
-        <ng-container *ngFor="let column of decisionColumns" [matColumnDef]="column">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</mat-header-cell>
-          <mat-cell *matCellDef="let row">{{ row[column] }}</mat-cell>
-        </ng-container>
-        <mat-header-row *matHeaderRowDef="decisionColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: decisionColumns"></mat-row>
-      </mat-table>
+
+      <mat-table [dataSource]="decisionDataSource" matSort class="mat-elevation-z8">
+  <ng-container *ngFor="let column of decisionColumns" [matColumnDef]="column">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</mat-header-cell>
+    <mat-cell *matCellDef="let row">
+      <ng-container *ngIf="['EntryDate', 'ReleaseDate', 'ArrivalDate'].includes(column); else defaultColumn">
+        {{ row[column] | date: 'dd/MM/yyyy HH:mm' }}
+      </ng-container>
+      <ng-template #defaultColumn>
+        {{ row[column] }}
+      </ng-template>
+    </mat-cell>
+  </ng-container>
+  <mat-header-row *matHeaderRowDef="decisionColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: decisionColumns"></mat-row>
+</mat-table>
       <mat-paginator #decisionPaginator [pageSizeOptions]="[15, 50, 100]"></mat-paginator>
     </mat-tab>
 
     <!-- Urgency Tab -->
-    <mat-tab label="מידע חדר מיון">
-      <div class="tab-header">
-        <mat-form-field>
+    <mat-tab label="רמת דחיפות">
+      <div dir="rtl" class="filter-form" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+        <!-- Search Field -->
+        <mat-form-field style="flex-grow: 1; margin-right: 10px; width: 70%;">
           <mat-label>חיפוש</mat-label>
           <input matInput [formControl]="urgencyFilter" />
         </mat-form-field>
-        <button mat-raised-button color="primary" (click)="exportToExcel(urgencyDataSource, 'Urgency')">Export</button>
-        <button mat-raised-button (click)="resetFilter(decisionFilter, decisionDataSource)">Reset</button>
+
+        <!-- Icons -->
+        <div class="icon-container" style="display: flex; align-items: center;">
+          <!-- Excel Export -->
+          <img src="../../assets/excel.png" alt="Export to Excel" (click)="exportToExcel(urgencyDataSource, 'Urgency')" width="50px" style="margin-left: 10px;" />
+          <!-- Reset Filters -->
+          <button mat-button mat-raised-button color="primary" class="custom-button" (click)="resetFilter(urgencyFilter)">
+            <i class="material-icons">refresh</i>
+          </button>
+        </div>
       </div>
-      <div *ngIf="isLoadingUrgency" class="loading-spinner">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
-        <h2>הנתונים נטענים...</h2>
-      </div>
-      <mat-table *ngIf="!isLoadingUrgency" [dataSource]="urgencyDataSource" matSort class="mat-elevation-z8">
+
+      <mat-table [dataSource]="urgencyDataSource" matSort dir="rtl" class="mat-elevation-z8">
         <ng-container *ngFor="let column of urgencyColumns" [matColumnDef]="column">
           <mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</mat-header-cell>
-          <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
-        </ng-container>
+          <mat-cell *matCellDef="let row">
+            <ng-container *ngIf="['EntryDate', 'ReleaseDate', 'ArrivalDate'].includes(column); else defaultColumn">
+              {{ row[column] | date: 'dd/MM/yyyy HH:mm' }}
+            </ng-container>
+            <ng-template #defaultColumn>
+              {{ row[column] }}
+            </ng-template>
+          </mat-cell>
+              </ng-container>
         <mat-header-row *matHeaderRowDef="urgencyColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: urgencyColumns"></mat-row>
       </mat-table>
@@ -55,24 +81,37 @@
     </mat-tab>
 
     <!-- Complaint Tab -->
-    <mat-tab label="תלונות">
-      <div class="tab-header">
-        <mat-form-field>
+    <mat-tab label="סיבת פנייה">
+      <div dir="rtl" class="filter-form" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+        <!-- Search Field -->
+        <mat-form-field style="flex-grow: 1; margin-right: 10px; width: 70%;">
           <mat-label>חיפוש</mat-label>
           <input matInput [formControl]="complaintFilter" />
         </mat-form-field>
-        <button mat-raised-button color="primary" (click)="exportToExcel(complaintDataSource, 'Complaint')">Export</button>
-        <button mat-raised-button (click)="resetFilter(decisionFilter, decisionDataSource)">Reset</button>
+
+        <!-- Icons -->
+        <div class="icon-container" style="display: flex; align-items: center;">
+          <!-- Excel Export -->
+          <img src="../../assets/excel.png" alt="Export to Excel" (click)="exportToExcel(complaintDataSource, 'Complaint')" width="50px" style="margin-left: 10px;" />
+          <!-- Reset Filters -->
+          <button mat-button mat-raised-button color="primary" class="custom-button" (click)="resetFilter(complaintFilter)">
+            <i class="material-icons">refresh</i>
+          </button>
+        </div>
       </div>
-      <div *ngIf="isLoadingComplaint" class="loading-spinner">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
-        <h2>הנתונים נטענים...</h2>
-      </div>
-      <mat-table *ngIf="!isLoadingComplaint" [dataSource]="complaintDataSource" matSort class="mat-elevation-z8">
+
+      <mat-table [dataSource]="complaintDataSource" matSort dir="rtl" class="mat-elevation-z8">
         <ng-container *ngFor="let column of complaintColumns" [matColumnDef]="column">
           <mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</mat-header-cell>
-          <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
-        </ng-container>
+          <mat-cell *matCellDef="let row">
+            <ng-container *ngIf="['EntryDate', 'ReleaseDate', 'ArrivalDate'].includes(column); else defaultColumn">
+              {{ row[column] | date: 'dd/MM/yyyy HH:mm' }}
+            </ng-container>
+            <ng-template #defaultColumn>
+              {{ row[column] }}
+            </ng-template>
+          </mat-cell>
+              </ng-container>
         <mat-header-row *matHeaderRowDef="complaintColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: complaintColumns"></mat-row>
       </mat-table>
@@ -80,24 +119,37 @@
     </mat-tab>
 
     <!-- Discharge Date Tab -->
-    <mat-tab label="תאריך שחרור">
-      <div class="tab-header">
-        <mat-form-field>
+    <mat-tab label="תאריך שחרור בפועל">
+      <div dir="rtl" class="filter-form" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+        <!-- Search Field -->
+        <mat-form-field style="flex-grow: 1; margin-right: 10px; width: 70%;">
           <mat-label>חיפוש</mat-label>
           <input matInput [formControl]="dischargeFilter" />
         </mat-form-field>
-        <button mat-raised-button color="primary" (click)="exportToExcel(dischargeDataSource, 'Discharge')">Export</button>
-        <button mat-raised-button (click)="resetFilter(decisionFilter, decisionDataSource)">Reset</button>
+
+        <!-- Icons -->
+        <div class="icon-container" style="display: flex; align-items: center;">
+          <!-- Excel Export -->
+          <img src="../../assets/excel.png" alt="Export to Excel" (click)="exportToExcel(dischargeDataSource, 'Discharge_Date')" width="50px" style="margin-left: 10px;" />
+          <!-- Reset Filters -->
+          <button mat-button mat-raised-button color="primary" class="custom-button" (click)="resetFilter(dischargeFilter)">
+            <i class="material-icons">refresh</i>
+          </button>
+        </div>
       </div>
-      <div *ngIf="isLoadingDischarge" class="loading-spinner">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
-        <h2>הנתונים נטענים...</h2>
-      </div>
-      <mat-table *ngIf="!isLoadingDischarge" [dataSource]="dischargeDataSource" matSort class="mat-elevation-z8">
+
+      <mat-table [dataSource]="dischargeDataSource" matSort dir="rtl" class="mat-elevation-z8">
         <ng-container *ngFor="let column of dischargeColumns" [matColumnDef]="column">
           <mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</mat-header-cell>
-          <mat-cell *matCellDef="let row">{{ row[column] }}</mat-cell>
-        </ng-container>
+          <mat-cell *matCellDef="let row">
+            <ng-container *ngIf="['EntryDate', 'ReleaseDate', 'ArrivalDate'].includes(column); else defaultColumn">
+              {{ row[column] | date: 'dd/MM/yyyy HH:mm' }}
+            </ng-container>
+            <ng-template #defaultColumn>
+              {{ row[column] }}
+            </ng-template>
+          </mat-cell>
+              </ng-container>
         <mat-header-row *matHeaderRowDef="dischargeColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: dischargeColumns"></mat-row>
       </mat-table>
@@ -105,24 +157,37 @@
     </mat-tab>
 
     <!-- Doctor Signature Tab -->
-    <mat-tab label="חתימת רופא">
-      <div class="tab-header">
-        <mat-form-field>
+    <mat-tab label=" חתימת רופא משחרר">
+      <div dir="rtl" class="filter-form" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+        <!-- Search Field -->
+        <mat-form-field style="flex-grow: 1; margin-right: 10px; width: 70%;">
           <mat-label>חיפוש</mat-label>
           <input matInput [formControl]="signatureFilter" />
         </mat-form-field>
-        <button mat-raised-button color="primary" (click)="exportToExcel(signatureDataSource, 'Doctor_Signature')">Export</button>
-        <button mat-raised-button (click)="resetFilter(decisionFilter, decisionDataSource)">Reset</button>
+
+        <!-- Icons -->
+        <div class="icon-container" style="display: flex; align-items: center;">
+          <!-- Excel Export -->
+          <img src="../../assets/excel.png" alt="Export to Excel" (click)="exportToExcel(signatureDataSource, 'Doctor_Signature')" width="50px" style="margin-left: 10px;" />
+          <!-- Reset Filters -->
+          <button mat-button mat-raised-button color="primary" class="custom-button" (click)="resetFilter(signatureFilter)">
+            <i class="material-icons">refresh</i>
+          </button>
+        </div>
       </div>
-      <div *ngIf="isLoadingSignature" class="loading-spinner">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
-        <h2>הנתונים נטענים...</h2>
-      </div>
-      <mat-table *ngIf="!isLoadingSignature" [dataSource]="signatureDataSource" matSort class="mat-elevation-z8">
+
+      <mat-table [dataSource]="signatureDataSource" matSort dir="rtl" class="mat-elevation-z8">
         <ng-container *ngFor="let column of signatureColumns" [matColumnDef]="column">
           <mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</mat-header-cell>
-          <mat-cell *matCellDef="let row">{{ row[column] }}</mat-cell>
-        </ng-container>
+          <mat-cell *matCellDef="let row">
+            <ng-container *ngIf="['EntryDate', 'ReleaseDate', 'ArrivalDate'].includes(column); else defaultColumn">
+              {{ row[column] | date: 'dd/MM/yyyy HH:mm' }}
+            </ng-container>
+            <ng-template #defaultColumn>
+              {{ row[column] }}
+            </ng-template>
+          </mat-cell>
+              </ng-container>
         <mat-header-row *matHeaderRowDef="signatureColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: signatureColumns"></mat-row>
       </mat-table>
