--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -113,7 +113,7 @@ class="custom-toggle-group"
             [foregroundColor]="'#f39c12'"
           ></ngx-gauge>
           <div class="gauge-info">
-            סה"כ מטופלים : <strong> {{ dataSource4.data.length }} </strong> מתוך
+            סה"כ מטופלים : <strong> {{ DiagnosisICD9dataSource.data.length }} </strong> מתוך
             <strong>{{ globalSourceTableFilter === 'מאושפזים' ? NullReleaseDateCount : NonNullReleaseDateCount }}</strong>
           </div>
         </div>
@@ -150,7 +150,7 @@ class="custom-toggle-group"
       [foregroundColor]="'#dd4b39'"
     ></ngx-gauge>
     <div class="gauge-info">
-      סה"כ מטופלים: <strong>{{ dataSource1.data.length }}</strong>
+      סה"כ מטופלים: <strong>{{ sugerAbove180.data.length }}</strong>
       מתוך <strong>{{ globalSourceTableFilter === 'מאושפזים' ? NullReleaseDateCount : NonNullReleaseDateCount }}</strong>
     </div>
   </div>
@@ -188,9 +188,9 @@ class="custom-toggle-group"
       [foregroundColor]="'#e74c3c'"
     ></ngx-gauge>
     <div class="gauge-info">
-      חולי סוכרת עם סוכר מעל 180:
-      <strong>{{ dataSource1.data.length }}</strong> מתוך
-      <strong>{{ dataSource4.data.length }}</strong>
+    מטופלים עם סוכר מעל 180:
+      <strong>{{ sugerAbove180.data.length }}</strong> מתוך
+      <strong>{{ DiagnosisICD9dataSource.data.length }}</strong>
     </div>
   </div>
 </mat-card>
@@ -209,7 +209,7 @@ class="custom-toggle-group"
     ></ngx-gauge>
     <div class="gauge-info">
       חולי סוכרת עם סוכר מתחת ל-70:
-      <strong>{{ dataSource1.data.length }}</strong> מתוך
+      <strong>{{ sugerAbove180.data.length }}</strong> מתוך
       <strong>{{ dataSourceBelow70.data.length }}</strong>
     </div>
   </div>
@@ -236,7 +236,7 @@ class="custom-toggle-group"
         </ng-template>
         <table
           mat-table
-          [dataSource]="dataSource1"
+          [dataSource]="sugerAbove180"
           class="mat-elevation-z8"
           matSort 
           style="table-layout: fixed; width: 100%"
@@ -281,8 +281,8 @@ class="custom-toggle-group"
             <td mat-cell *matCellDef="let element">{{ element.Release_Date | date }}</td>
           </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          <tr mat-header-row *matHeaderRowDef="sugerAbove180Columns"></tr>
+          <tr mat-row *matRowDef="let row; columns: sugerAbove180Columns"></tr>
         </table>
         <mat-paginator
           #paginator1
@@ -448,7 +448,7 @@ class="custom-toggle-group"
         </ng-template>
         <table
           mat-table
-          [dataSource]="dataSource4"
+          [dataSource]="DiagnosisICD9dataSource"
           class="mat-elevation-z8"
           matSort
           
